# dsbin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  azmusic.py  distro.py  dockermounter.py  dsbin.code-workspace  dsm.py  dupefinder.py  envscripts.py  envsync.py  evtelegram.py  fml.py  metacopy.py  mp3ify.py  mypy.ini  netreset.py  pkginst.py  pybounce.sh  pyproject.toml  requirements.txt  rmp3.py  rsyncer.py  ruff.toml  scriptdep.py  timestamps.py  updater.sh  uv.lock.py  uvmigrate.py
.github/workflows/: docs.yml
.pdoc/dark/: syntax-highlighting.css  theme.css
completions/: aif2wav.fish  alacrity.fish  backupsort.fish  bigfiles.fish  bipclean.fish  bounceprune.fish  bounces.fish  changelogs.fish  checkdeps.fish  checkimports.fish  codeconfigs.fish  csvfix.fish  dmg-encrypt.fish  dmgify.fish  dockermounter.fish  dsservice.fish  dsupdater.fish  dsver.fish  ffgif.fish  fftrim.fish  hpfilter.fish  impactanalyzer.fish  lsbin.fish  metacopy.fish  mp3ify.fish  mshare.fish  packageanalyzer.fish  pybounce.fish  pybumper.fish  pycompare.fish  pyprojector.fish  reporun.fish  rmp3.fish  spacepurger.fish  ssh-tunnel.fish  timestamps.fish  w11renamer.fish  wav2aif.fish  workcalc.fish  wpmusic.fish
dsmusiclib/: alacrity.py  azmusic.py  bipclean.py  bounce_parser.py  bounceprune.py  hpfilter.py  wpmusic.py
dsmusiclib/wpmusiclib/: audio_track.py  metadata_setter.py  upload_tracker.py  wp_config.py
src/bin_scripts/: envscripts.py  ffgif.py  fftrim.py  install_packages.py  mvdmg.py  oldprojects.py  pipmigrator.py  pycompare.py  spacepurger.py  w11renamer.py  watchtower.py  ytdl.py
src/dsbin/: __init__.py  backupsort.py  bigfiles.py  changehostname.py  distro.py  dmgify.py  dockermounter.py  dsver.py  dupefinder.py  envsync.py  ffgif.py  fftrim.py  fml.py  foldermerge.py  format_calendar.py  lsbin.py  mp3ify.py  mshare.py  pkginst.py  pybounce.py  pycompare.py  pyenversioner.py  scriptdep.py  setmag.py  spacepurger.py  ssh_tunnel.py  update_changelog.py  update_readme.py  w11renamer.py  watchtower.py  ytdl.py
src/dsbin/alfred/: README.md  app_launcher.py  downloads_folder.py  find_python_files.py  logic_searches.py  nexus_search.py  shlink.py  text_to_file.py  title_case.py
src/dsbin/alfred/file_indexer/: config_handler.py  file_indexer.py  fuzzy_matcher.py
src/dsbin/code_configs/: config_files.py  main.py
src/dsbin/configs/: main.py
src/dsbin/dev/: analyze_impact.py  changelog.py  check_dependencies.py  check_imports.py  code_configs.py  dsbump.py  gh_release.py  gitcalc.py  impact_analyzer.py  import_checker.py  package_analyzer.py  pipmigrator.py  poetry_migrate.py  pyenversioner.py  pyversioner.py  scriptdep.py  tag_replace.py  update_changelog.py  update_deps.py  uvmigrate.py
src/dsbin/dev/code_configs/: code_configs.py
src/dsbin/dev/dsbots/: config.py  dsbots.py  syncer.py
src/dsbin/dev/gitcalc/: main.py  sessions.py  streaks.py  summary.py  time.py
src/dsbin/dev/prism/: prism.py  prism_config.py  syncer.py
src/dsbin/dsbump/: git_helper.py  main.py  version_helper.py
src/dsbin/dsmusic/: alacrity.py  awa.py  azmusic.py  bounce_parser.py  bounceprune.py  calc.py  filer.py  hpfilter.py  main.py  wpmusic.py
src/dsbin/dsmusic/wpmusiclib/: db_manager.py  db_migrator.py  file_manager.py  metadata_setter.py  table_formatter.py  track_identifier.py  upload_tracker.py  wp_config.py
src/dsbin/dsupdater/: filter_phrases.py  output_processor.py  privilege_helper.py  shell_helper.py  update_manager.py  updater.py
src/dsbin/dsupdater/updaters/: __init__.py  chezmoi.py  docker_compose.py  dsbin.py  homebrew.py  mac_app_store.py  macos.py  python_pip.py
src/dsbin/files/: __init__.py  backupsort.py  bigfiles.py  dupefinder.py  file_manager.py  fml.py  foldermerge.py  rsyncer.py
src/dsbin/gitcalc/: main.py  sessions.py  summary.py  time.py
src/dsbin/iplookup/: ip_sources.py  iplookup.py
src/dsbin/logic/: bipclean.py  bounce_parser.py  bouncefiler.py  bounceprune.py  bounces.py  oldprojects.py
src/dsbin/mac/: dmg_encrypt.py  dmgify.py  mvdmg.py  netreset.py  pkginst.py  setmag.py  spacepurger.py  timestamps.py
src/dsbin/media/: ffgif.py  fftrim.py  media_manager.py  ytdl.py
src/dsbin/music/: alacrity.py  awa.py  azmusic.py  bipclean.py  bounce_parser.py  bounceprune.py  calcbounce.py  evtelegram.py  hpfilter.py  metacopy.py  mp3ify.py  mshare.py  pybounce.py  pybounce_helpers.py  pyfiler.py  rmp3.py  wpmusic.py
src/dsbin/music/wpmusic/: db_manager.py  file_manager.py  main.py  metadata_setter.py  track_identifier.py  upload_tracker.py  wp_config.py
src/dsbin/music/wpmusiclib/: db_manager.py  file_manager.py  table_formatter.py  track_identifier.py  upload_tracker.py  wp_config.py
src/dsbin/prism/: prism.py  prism_config.py  prism_sync.py
src/dsbin/pybounce/: bounce_files.py  client_protocol.py  file_manager.py  main.py  sqlite_manager.py
src/dsbin/pybumper/: git_helper.py  main.py  version_helper.py
src/dsbin/pybumper/beta/: git_helper.py  main.py  monorepo_helper.py  pybumper.py
src/dsbin/pyprojector/: pyprojector.py
src/dsbin/python/: pipmigrator.py  scriptdep.py
src/dsbin/systemd/: service_list.py  systemd.py
src/dsbin/text/: csvfix.py  pycompare.py  w11renamer.py
src/dsbin/tools/: changehostname.py  clear_purgeable.py  distro.py  dockermounter.py  dsfish.py  dsservice.py  envsync.py  iplookup.py  spacepurger.py  ssh_tunnel.py  watchtower.py
src/dsbin/tools/dsupdater/: output_processor.py  shell_helper.py  update_manager.py  updater.py
src/dsbin/tools/iplookup/: ip_sources.py
src/dsbin/tools/systemd/: service_list.py  service_template.py  systemd.py
src/dsbin/tools/workcalc/: main.py  plugin.py  stats.py  (+4 more)
src/dsbin/updater/: shell_handler.py  shell_helper.py  update_manager.py  updater.py
src/dsbin/workcalc/: bounce_plugin.py  git_plugin.py  main.py  sessions.py  stats.py  streaks.py  summary.py  time.py
src/dsbin/wpmusic/: audio_track.py  db_manager.py  db_migrator.py  file_manager.py  main.py  metadata_fetcher.py  metadata_setter.py  track_identifier.py  upload_tracker.py  wp_config.py  wp_file_manager.py
(+34 files in other folders)
