[tool.poetry]
name = "dsbin"
version = "1.4.8"
description = "Personal Python script library"
authors = ["Danny Stewart <danny@stewart.cc>"]
readme = "README.md"
packages = [{include = "dsbin", from = "src"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
dsutil = {git = "https://gitlab.dannystewart.com/danny/dsutil.git"}
halo = ">=0.0.31"
inquirer = ">=3.4.0"
json5 = ">=0.10.0"
mutagen = ">=1.47.0"
mysql-connector-python = ">=9.1.0"
natsort = ">=8.4.0"
numpy = ">=2.2.1"
paramiko = ">=3.5.0"
pexpect = ">=4.9.0"
pillow = ">=11.1.0"
pycountry = ">=24.6.1"
pyperclip = ">=1.9.0"
python-dotenv = ">=1.0.1"
requests = ">=2.32.3"
rich = ">=13.9.4"
scipy = ">=1.15.0"
scp = ">=0.15.0"
telethon = ">=1.38.1"
tomlkit = ">=0.13.2"
tqdm = ">=4.67.1"
types-paramiko = ">=3.5.0.20240928"
types-pillow = ">=10.2.0.20240822"
types-requests = ">=2.32.0.20241016"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.14.1"
ruff = ">=0.9.0"

[tool.poetry.scripts]
# Scripts to list all my scripts and check versions
lsbin = "dsbin.lsbin:main"
dsver = "dsbin.dsver:main"

# Dedicated utilities
dsupdater = "dsbin.dsupdater.updater:main"
dsupdater-install = "dsbin.dsupdater.install:main"
iplookup = "dsbin.iplookup.iplookup:main"
prism = "dsbin.prism.prism:main"
workcalc = "dsbin.workcalc.main:main"
wpmusic = "dsbin.wpmusic.main:main"

# File management scripts
backupsort = "dsbin.files.backupsort:main"
bigfiles = "dsbin.files.bigfiles:main"
dupefinder = "dsbin.files.dupefinder:main"
fml = "dsbin.files.fml:main"
foldermerge = "dsbin.files.foldermerge:main"
rsyncer = "dsbin.files.rsyncer:main"

# Media scripts
ffgif = "dsbin.media.ffgif:main"
fftrim = "dsbin.media.fftrim:main"
ytdl = "dsbin.media.ytdl:main"

# Music scripts
aif2wav = "dsbin.music.awa:aif2wav"
alacrity = "dsbin.music.alacrity:main"
bounceprune = "dsbin.music.bounceprune:main"
hpfilter = "dsbin.music.hpfilter:main"
metacopy = "dsbin.music.metacopy:main"
mp3ify = "dsbin.music.mp3ify:main"
mshare = "dsbin.music.mshare:main"
pybounce = "dsbin.music.pybounce:main"
pyfiler = "dsbin.music.pyfiler:main"
rmp3 = "dsbin.music.rmp3:main"
wav2aif = "dsbin.music.awa:wav2aif"

# Logic-specific scripts
bipclean = "dsbin.logic.bipclean:main"
oldprojects = "dsbin.logic.oldprojects:main"

# Mac-specific scripts
dmgify = "dsbin.mac.dmgify:main"
mvdmg = "dsbin.mac.mvdmg:main"
netreset = "dsbin.mac.netreset:main"
pkginst = "dsbin.mac.pkginst:main"
setmag = "dsbin.mac.setmag:main"
spacepurger = "dsbin.mac.spacepurger:main"
timestamps = "dsbin.mac.timestamps:main"

# Development-related scripts
dsbump = "dsbin.dev.dsbump:main"
dsversion = "dsbin.dev.dsbump:main"
pipmigrator = "dsbin.dev.pipmigrator:main"
poetry-migrate = "dsbin.dev.poetry_migrate:main"
pyenversioner = "dsbin.dev.pyenversioner:main"
scriptdep = "dsbin.dev.scriptdep:main"
tagreplace = "dsbin.dev.tag_replace:main"
uvmigrate = "dsbin.dev.uvmigrate:main"

# System tools
changehostname = "dsbin.tools.changehostname:main"
dsservice = "dsbin.tools.dsservice:main"
dockermounter = "dsbin.tools.dockermounter:main"
envsync = "dsbin.tools.envsync:main"
ssh-tunnel = "dsbin.tools.ssh_tunnel:main"
watchtower = "dsbin.tools.watchtower:main"

# Text processing scripts
pycompare = "dsbin.text.pycompare:main"
w11renamer = "dsbin.text.w11renamer:main"
